@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3632 utf-8
+personal_ws-1.1 en 3634 utf-8
 AAC
 AAS
 ABI
@@ -344,6 +344,7 @@ EOLed
 EPEL
 EPERM
 EPFCLCD
+EPIPE
 EPO
 EPS
 ESC
@@ -810,6 +811,7 @@ NONBLOCK
 NONUT
 NOP
 NOPARENT
+NOSIGPIPE
 NOTALARM
 NOTBOOST
 NOTBYPASS
