@@ -83,6 +83,12 @@ https://github.com/networkupstools/nut/milestone/12
    * Fixed thread-safety of IP address printout in `libupsclient` method
      `upscli_tryconnect()` (practical bug seen in `nut-scanner` parallel scans).
      [issue #3234]
+   * The `upsdrvquery` code base was revised to handle SIGPIPE without crashing
+     (if the consumers did not neuter the signal themselves), although this
+     behavior is optional by `upsdrvquery_NOSIGPIPE`.
+     Separated an `upsdrvquery_ping()` operation from earlier code, so it can
+     be directly used by consumers (in-tree this is drivers and `upsdrvctl`).
+     [issue #3276, PR #3277]
 
  - NUT for Windows specific updates:
    * Revised detection of (relative) paths to program and configuration files
